# another_yet_aiogram_template

./: .gitignore  Makefile  Readme.md  alembic.ini  licence  main.py  pyproject.toml
bot/: __init__.py  setup_bot.py  start.py
bot/handlers/: start.py
bot/middleware/: cache_mw.py  chat_mw.py  clear_state_mw.py  config_mw.py  dao_mw.py  user_mw.py
cache/: adapter.py
config/: __init__.py  config.py  config.toml.dist  logger.py  logger.toml.dist  structures.py
db/: __init__.py  base.py  db.sqlite  utils.py
db/dao/: __init__.py  base.py  chat.py  user.py
db/migrations/: README.md  env.py
db/migrations/versions/: 2024-01-08_19-21-47_user.py  2024-01-24_19-00-57_first.py  2024-01-24_19-13-13_add_chat_type.py
db/models/: __init__.py  chats.py  user.py
tests/: conftest.py
tests/bot/: test_bot.py
tests/config/: t_config.toml  test_config.py
tests/db/: conftest.py  test_base_dao.py  test_user_dao.py
utils/: enums.py
