[tool.poetry]
name = "aiogram_template"
version = "0.1.0"
description = ""
authors = ["Seliverstov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
SQLAlchemy = "^2.0.25"
loguru = "^0.7.2"
pydantic = "^2.5.3"
alembic = "^1.13.1"
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"
aiogram = "^3.3.0"

[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
